// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZForm demo -- base 1`] = `
.emotion-45 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-45 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-7 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-7:before,
.emotion-7:after {
  content: ' ';
  display: table;
}

.emotion-7:after {
  clear: both;
}

.emotion-7 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-45 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-45 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-7 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-7:before,
.emotion-7:after {
  content: ' ';
  display: table;
}

.emotion-7:after {
  clear: both;
}

.emotion-7 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

<form
  class="uc-fe-form emotion-45 emotion-46"
>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="1"
    >
      input_1
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="1"
    >
      input_2
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="1"
    >
      input_3
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="1"
    >
      checkbox_1
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        checked=""
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="1"
    >
      checkbox_2
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        type="checkbox"
      />
    </div>
  </div>
  <p
    class="u-red"
  />
  <button
    type="button"
  >
    submit
  </button>
</form>
`;

exports[`ZForm demo -- name 1`] = `
.emotion-81 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-81 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-7 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-7:before,
.emotion-7:after {
  content: ' ';
  display: table;
}

.emotion-7:after {
  clear: both;
}

.emotion-7 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-81 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-81 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-7 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-7:before,
.emotion-7:after {
  content: ' ';
  display: table;
}

.emotion-7:after {
  clear: both;
}

.emotion-7 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

<form
  class="uc-fe-form emotion-81 emotion-82"
>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      input 0
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      input 1
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      input 2
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      checkbox first
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        checked=""
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      checkbox second
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      checkbox third
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      a.b.c.d
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      r[0][1][2][3]
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      z[0].a[1].b[2]
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <button
    type="button"
  >
    submit
  </button>
</form>
`;

exports[`ZForm demo -- rule 1`] = `
.emotion-138 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-138 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-11 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-11:before,
.emotion-11:after {
  content: ' ';
  display: table;
}

.emotion-11:after {
  clear: both;
}

.emotion-11 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-5 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-5.uc-fe-input-block {
  display: block;
}

.emotion-5 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-5 input,
.emotion-5 input:hover,
.emotion-5 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-5:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-5 input {
  line-height: 26px;
  height: 26px;
}

.emotion-5 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-3 {
  display: table;
  width: 100%;
}

.emotion-36 {
  margin-top: 4px;
  color: #526075;
}

.emotion-36 > .uc-fe-combine-item,
.emotion-36 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-36 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-36 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-36 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-36 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-36 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 4px;
}

.emotion-36 .uc-fe-form-tip-content {
  line-height: 20px;
}

.emotion-36 .uc-fe-form-tip-icon {
  fill: #3860f4;
}

.emotion-33 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

.emotion-49 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  min-height: 28px;
  line-height: 28px;
  display: inline-block;
  vertical-align: middle;
  font-size: 0;
  color: #0a1633;
}

.emotion-49 > * {
  font-size: 12px;
}

.emotion-49 .uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  vertical-align: middle;
}

.emotion-49 .uc-fe-checkbox-icon-wrap .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-49 .uc-fe-checkbox-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-49:hover .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
}

.emotion-49.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.emotion-49.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
  background: #3860f4;
}

.emotion-49.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.emotion-49.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  visibility: visible;
  opacity: 1;
  fill: #ffffff;
}

.emotion-49.uc-fe-checkbox-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-49.uc-fe-checkbox-disabled .uc-fe-checkbox-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-49.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.emotion-49.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  fill: #cccccc;
}

.emotion-49.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.emotion-49.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  background: none;
}

.emotion-47 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-66 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.emotion-64 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-64:link,
.emotion-64:visited {
  color: #0a1633;
}

.emotion-64:hover,
.emotion-64:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-61 {
  vertical-align: baseline;
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.emotion-128 {
  padding: 20px;
  border: 1px solid #d2d6ea;
  background: #f6f6fb;
}

* + .emotion-128 {
  margin-top: 12px;
}

.emotion-128 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-136 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 2px 4px -1px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
}

.emotion-136:link,
.emotion-136:visited {
  color: #ffffff;
}

.emotion-136:hover,
.emotion-136:active {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
}

.emotion-138 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-138 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-11 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-11:before,
.emotion-11:after {
  content: ' ';
  display: table;
}

.emotion-11:after {
  clear: both;
}

.emotion-11 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-5 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-5.uc-fe-input-block {
  display: block;
}

.emotion-5 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-5 input,
.emotion-5 input:hover,
.emotion-5 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-5:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-5 input {
  line-height: 26px;
  height: 26px;
}

.emotion-5 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-3 {
  display: table;
  width: 100%;
}

.emotion-36 {
  margin-top: 4px;
  color: #526075;
}

.emotion-36 > .uc-fe-combine-item,
.emotion-36 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-36 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-36 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-36 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-36 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-36 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 4px;
}

.emotion-36 .uc-fe-form-tip-content {
  line-height: 20px;
}

.emotion-36 .uc-fe-form-tip-icon {
  fill: #3860f4;
}

.emotion-33 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

.emotion-49 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  min-height: 28px;
  line-height: 28px;
  display: inline-block;
  vertical-align: middle;
  font-size: 0;
  color: #0a1633;
}

.emotion-49 > * {
  font-size: 12px;
}

.emotion-49 .uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  vertical-align: middle;
}

.emotion-49 .uc-fe-checkbox-icon-wrap .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-49 .uc-fe-checkbox-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-49:hover .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
}

.emotion-49.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.emotion-49.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
  background: #3860f4;
}

.emotion-49.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.emotion-49.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  visibility: visible;
  opacity: 1;
  fill: #ffffff;
}

.emotion-49.uc-fe-checkbox-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-49.uc-fe-checkbox-disabled .uc-fe-checkbox-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-49.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.emotion-49.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  fill: #cccccc;
}

.emotion-49.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.emotion-49.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  background: none;
}

.emotion-47 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-66 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.emotion-64 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-64:link,
.emotion-64:visited {
  color: #0a1633;
}

.emotion-64:hover,
.emotion-64:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-61 {
  vertical-align: baseline;
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.emotion-128 {
  padding: 20px;
  border: 1px solid #d2d6ea;
  background: #f6f6fb;
}

* + .emotion-128 {
  margin-top: 12px;
}

.emotion-128 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-136 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 2px 4px -1px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
}

.emotion-136:link,
.emotion-136:visited {
  color: #ffffff;
}

.emotion-136:hover,
.emotion-136:active {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
}

<form
  class="uc-fe-form emotion-138 emotion-139"
>
  <div
    class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      input_1
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
      span="5"
    >
      <span
        class="uc-fe-input emotion-5 emotion-6"
      >
        <span
          class="emotion-3 emotion-4"
        >
          <input
            value=""
          />
        </span>
      </span>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      input_2
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
      span="5"
    >
      <span
        class="uc-fe-input emotion-5 emotion-6"
      >
        <span
          class="emotion-3 emotion-4"
        >
          <input
            value=""
          />
        </span>
      </span>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      input_3
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
      span="5"
    >
      <span
        class="uc-fe-input emotion-5 emotion-6"
      >
        <span
          class="emotion-3 emotion-4"
        >
          <input
            value=""
          />
        </span>
      </span>
      <div
        class="uc-fe-combine uc-fe-form-tip emotion-35 emotion-36 emotion-37"
        spacing="sm"
      >
        <div
          class="uc-fe-combine-item"
        >
          <div
            class="uc-fe-form-tip-icon"
          >
            <svg
              class="uc-fe-form-tip-icon emotion-33 emotion-34"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
                transform="matrix(1 0 0 -1 0 24)"
              />
            </svg>
          </div>
        </div>
        <div
          class="uc-fe-combine-item"
        >
          <div
            class="uc-fe-form-tip-content"
          >
            this is required
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      checkbox_1
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
      span="5"
    >
      <span
        checked=""
        class="uc-fe-checkbox uc-fe-checkbox-checked emotion-49 emotion-50"
      >
        <span
          class="uc-fe-checkbox-icon-wrap"
        >
          <svg
            class="uc-fe-checkbox-icon emotion-47 emotion-34"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      select_1
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
      span="5"
    >
      <div
        class=" emotion-66 emotion-67"
      >
        <div>
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-63 emotion-64 emotion-65"
            type="button"
          >
            <div>
              请选择
            </div>
            <i
              class="uc-fe-icon icon__down emotion-60 emotion-61 emotion-62"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      select_2
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
      span="5"
    >
      <div
        class=" emotion-66 emotion-67"
      >
        <div>
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-63 emotion-64 emotion-65"
            type="button"
          >
            <div>
              label-1
            </div>
            <i
              class="uc-fe-icon icon__down emotion-60 emotion-61 emotion-62"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      区域
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
      span="5"
    >
      <div
        class="uc-fe-form-sub-area emotion-128 emotion-129"
      >
        <div
          class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
        >
          <div
            class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
            span="2"
          >
            sub_item_1
          </div>
          <div
            class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
            span="5"
          >
            <div
              class=" emotion-66 emotion-67"
            >
              <div>
                <button
                  class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-63 emotion-64 emotion-65"
                  type="button"
                >
                  <div>
                    请选择
                  </div>
                  <i
                    class="uc-fe-icon icon__down emotion-60 emotion-61 emotion-62"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
        >
          <div
            class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
            span="2"
          >
            sub_item_2
          </div>
          <div
            class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
            span="5"
          >
            <div
              class=" emotion-66 emotion-67"
            >
              <div>
                <button
                  class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-63 emotion-64 emotion-65"
                  type="button"
                >
                  <div>
                    label-1
                  </div>
                  <i
                    class="uc-fe-icon icon__down emotion-60 emotion-61 emotion-62"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary emotion-136 emotion-65"
    type="button"
  >
    submit
  </button>
</form>
`;

exports[`ZForm demo -- uhost 1`] = `
.emotion-137 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-137 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-66 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-66:before,
.emotion-66:after {
  content: ' ';
  display: table;
}

.emotion-66:after {
  clear: both;
}

.emotion-66 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-127 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.emotion-125 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-125:link,
.emotion-125:visited {
  color: #0a1633;
}

.emotion-125:hover,
.emotion-125:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-122 {
  vertical-align: baseline;
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.emotion-135 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 2px 4px -1px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
}

.emotion-135:link,
.emotion-135:visited {
  color: #ffffff;
}

.emotion-135:hover,
.emotion-135:active {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
}

.emotion-63 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-63 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-60 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-60 .uc-fe-radio-styletype-default,
.emotion-60 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-60 .uc-fe-radio-styletype-default:last-child,
.emotion-60 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-60 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-60 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-60 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-60 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-60 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-60 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-60 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-4 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
  color: #3860f4;
  fill: #3860f4;
  background: #F4F6FF;
  border-color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-4:link,
.emotion-4:visited {
  color: #526075;
}

.emotion-4:hover,
.emotion-4:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #fafafc;
}

.emotion-4:hover {
  background: #F4F6FF;
}

.emotion-4.emotion-4 {
  min-width: 68px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
  z-index: 2;
}

.emotion-4.emotion-4:hover {
  z-index: 3;
}

.emotion-7 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-7:link,
.emotion-7:visited {
  color: #526075;
}

.emotion-7:hover,
.emotion-7:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #fafafc;
}

.emotion-7.emotion-7 {
  min-width: 68px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
}

.emotion-7.emotion-7:hover {
  z-index: 3;
}

.emotion-102 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-102 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-102 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-102 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-102 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-102 .uc-fe-switch-tip-on,
.emotion-102 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-102 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-102 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-102 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-102 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-102:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-102 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-102 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-102 .uc-fe-switch-tip-on {
  display: none;
}

.emotion-137 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-137 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-66 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-66:before,
.emotion-66:after {
  content: ' ';
  display: table;
}

.emotion-66:after {
  clear: both;
}

.emotion-66 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-127 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.emotion-125 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-125:link,
.emotion-125:visited {
  color: #0a1633;
}

.emotion-125:hover,
.emotion-125:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-122 {
  vertical-align: baseline;
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.emotion-135 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 2px 4px -1px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
}

.emotion-135:link,
.emotion-135:visited {
  color: #ffffff;
}

.emotion-135:hover,
.emotion-135:active {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8,inset 0 -3px 0 0 rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.12);
}

.emotion-63 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-63 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-60 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-60 .uc-fe-radio-styletype-default,
.emotion-60 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-60 .uc-fe-radio-styletype-default:last-child,
.emotion-60 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-60 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-60 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-60 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-60 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-60 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-60 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-60 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-4 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
  color: #3860f4;
  fill: #3860f4;
  background: #F4F6FF;
  border-color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-4:link,
.emotion-4:visited {
  color: #526075;
}

.emotion-4:hover,
.emotion-4:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #fafafc;
}

.emotion-4:hover {
  background: #F4F6FF;
}

.emotion-4.emotion-4 {
  min-width: 68px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
  z-index: 2;
}

.emotion-4.emotion-4:hover {
  z-index: 3;
}

.emotion-7 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-7:link,
.emotion-7:visited {
  color: #526075;
}

.emotion-7:hover,
.emotion-7:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #fafafc;
}

.emotion-7.emotion-7 {
  min-width: 68px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
}

.emotion-7.emotion-7:hover {
  z-index: 3;
}

.emotion-102 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-102 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-102 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-102 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-102 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-102 .uc-fe-switch-tip-on,
.emotion-102 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-102 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-102 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-102 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-102 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-102:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-102 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-102 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-102 .uc-fe-switch-tip-on {
  display: none;
}

<form
  class="uc-fe-form emotion-137 emotion-138"
>
  <div
    class="uc-fe-row uc-fe-form-item emotion-65 emotion-66 emotion-67"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      地域
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-62 emotion-63 emotion-2"
      span="10"
    >
      <div
        class="emotion-60 emotion-61"
      >
        <button
          checked=""
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-button-checked uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-5"
          type="button"
        >
          cn-zj
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          cn-bj1
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          hk
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          cn-bj2
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          us-ca
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          cn-gd
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          cn-sh
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          cn-sh2
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          us-ws
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          ge-fra
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          th-bkk
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          kr-seoul
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          sg
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          tw-kh
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          rus-mosc
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          jpn-tky
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          tw-tp
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          uae-dubai
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          idn-jakarta
        </button>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-65 emotion-66 emotion-67"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      可用区
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-62 emotion-63 emotion-2"
      span="10"
    >
      <div
        class="emotion-60 emotion-61"
      >
        <button
          checked=""
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-button-checked uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-5"
          type="button"
        >
          cn-zj-01
        </button>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-65 emotion-66 emotion-67"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      系列
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-62 emotion-63 emotion-2"
      span="10"
    >
      <div
        class="emotion-60 emotion-61"
      >
        <button
          checked=""
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-button-checked uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-5"
          type="button"
        >
          系列1
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          系列2
        </button>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-65 emotion-66 emotion-67"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      网络增强
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-62 emotion-63 emotion-2"
      span="10"
    >
      <div
        class="emotion-102 emotion-103"
      >
        <span
          class="uc-fe-switch-inner"
        >
          <span
            class="uc-fe-switch-tip-on"
          >
            ON
          </span>
          <span
            class="uc-fe-switch-tip-off"
          >
            OFF
          </span>
        </span>
        <span
          class="uc-fe-switch-button"
        >
          <span>
            <span
              class="uc-fe-switch-dot"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-65 emotion-66 emotion-67"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      镜像
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-62 emotion-63 emotion-2"
      span="10"
    >
      <div
        class="emotion-60 emotion-61"
      >
        <button
          checked=""
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-button-checked uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-5"
          type="button"
        >
          标准
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-7 emotion-5"
          type="button"
        >
          自制
        </button>
      </div>
      <div
        class=" emotion-127 emotion-128"
      >
        <div>
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-124 emotion-125 emotion-5"
            type="button"
          >
            <div>
              请选择
            </div>
            <i
              class="uc-fe-icon icon__down emotion-121 emotion-122 emotion-123"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <p
    class="u-red"
  />
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary emotion-135 emotion-5"
    type="button"
  >
    submit
  </button>
</form>
`;
